--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,26 +1,34 @@
 .section {
     display: flex;
+    align-items: center;
     padding: 18px 30px 16px;
 }
 
 .header {
-    align-items: center;
+    display: flex;
     justify-content: space-between;
 }
 
+.logo_link {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
 .logo {
+    display: block;
+    align-items: center;
     padding-left: 18px;
 }
 
 .menu {
     display: flex;
-    padding-right: 18px;
+    padding: 10px 18px;
     align-items: center;
 }
 
 .menu_contacts {
     margin-right: 24px;
-    margin-bottom: 4px;
     font-weight: 500px;
 }
 
