--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,39 +1,8 @@
 <body>
-  <header class="section header">
+  <header class="header">
     <div class="logo">
       <a href="#" class="logo_link">
-        <svg
-          width="115"
-          height="20"
-          viewBox="0 0 115 20"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <path
-            d="M70.05 2.37575C68.53 0.82505 66.12 0 63.11 0C58.61 0 54.79 1.88867 54.79 7.18688C54.79 12.4851 58.61 14.3539 63.11 14.3539C66.12 14.3539 68.54 13.5487 70.05 11.9781V14.1252H74.13V0.238569H70.05V2.37575ZM64.46 10.9841C60.83 10.9841 58.84 9.92048 58.84 7.18688C58.84 4.4334 60.83 3.36978 64.46 3.36978C68.09 3.36978 70.05 4.4334 70.05 7.18688C70.05 9.92048 68.08 10.9841 64.46 10.9841Z"
-            fill="currentColor"
-          ></path>
-          <path
-            d="M110.92 0.238569V2.38569C109.41 0.82505 106.99 0 103.98 0C99.48 0 95.66 1.88867 95.66 7.18688C95.66 12.4851 99.48 14.3539 103.98 14.3539C106.99 14.3539 109.41 13.5487 110.92 11.9781V14.1252H115V0.238569H110.92ZM105.33 10.9841C101.7 10.9841 99.71 9.92048 99.71 7.18688C99.71 4.4334 101.7 3.36978 105.33 3.36978C108.96 3.36978 110.92 4.4334 110.92 7.18688C110.92 9.92048 108.96 10.9841 105.33 10.9841Z"
-            fill="currentColor"
-          ></path>
-          <path
-            d="M0 3.60831H10.45L0 10.7455V14.1153H16.45V10.7455H6L16.45 3.60831V0.238525H0V3.60831Z"
-            fill="currentColor"
-          ></path>
-          <path
-            d="M32.87 2.47515C31.48 0.914513 29.13 0 25.81 0C21.02 0 17.61 2.07753 17.61 6.97813C17.61 11.8787 21.02 13.9563 25.81 13.9563C29.1 13.9563 31.45 13.0417 32.87 11.4811V16.6402L19.1 16.5606V20H36.95V0.238569H32.87V2.47515ZM27.28 10.5765C23.46 10.5765 21.66 9.51292 21.66 6.96819C21.66 4.42346 23.46 3.35984 27.28 3.35984C31.1 3.35984 32.87 4.42346 32.87 6.96819C32.87 9.51292 31.1 10.5765 27.28 10.5765Z"
-            fill="currentColor"
-          ></path>
-          <path
-            d="M43.04 2.59443V0.238569H38.99V14.1153H43.04V5.79523C45.51 3.88668 48.11 3.36978 50.39 3.36978C51.58 3.36978 52.64 3.50895 53.97 3.83698V0.467197C53.02 0.238569 51.86 0 50.2 0C47.59 0 45.13 0.725646 43.04 2.59443Z"
-            fill="currentColor"
-          ></path>
-          <path
-            d="M85.54 11.6898L79.57 0.238525H75.06L82.29 14.1153H84.38L81.56 20H86.04L95.47 0.238525H90.99L85.54 11.6898Z"
-            fill="currentColor"
-          ></path>
-        </svg>
+        <img class="logo" src="./images/logo_OK1.png" alt="" />
       </a>
     </div>
     <div class="menu">
@@ -58,54 +27,21 @@
       class="section menu-container js-menu-container-contacts"
       id="mobile-menu-contacts"
     >
-      <button
-        class="menu-toggle js-close-menu-contacts"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-      >
-        <svg class="icon-close" width="40" height="40">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-      </button>
-
       <div class="contact-us_main-wrapp">
+        <button
+          class="menu-toggle js-close-menu-contacts"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="icon-close" width="40" height="40">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <div class="logo contact-us">
           <a href="#" class="logo_link">
-            <svg
-              width="115"
-              height="20"
-              viewBox="0 0 115 20"
-              fill="black"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M70.05 2.37575C68.53 0.82505 66.12 0 63.11 0C58.61 0 54.79 1.88867 54.79 7.18688C54.79 12.4851 58.61 14.3539 63.11 14.3539C66.12 14.3539 68.54 13.5487 70.05 11.9781V14.1252H74.13V0.238569H70.05V2.37575ZM64.46 10.9841C60.83 10.9841 58.84 9.92048 58.84 7.18688C58.84 4.4334 60.83 3.36978 64.46 3.36978C68.09 3.36978 70.05 4.4334 70.05 7.18688C70.05 9.92048 68.08 10.9841 64.46 10.9841Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M110.92 0.238569V2.38569C109.41 0.82505 106.99 0 103.98 0C99.48 0 95.66 1.88867 95.66 7.18688C95.66 12.4851 99.48 14.3539 103.98 14.3539C106.99 14.3539 109.41 13.5487 110.92 11.9781V14.1252H115V0.238569H110.92ZM105.33 10.9841C101.7 10.9841 99.71 9.92048 99.71 7.18688C99.71 4.4334 101.7 3.36978 105.33 3.36978C108.96 3.36978 110.92 4.4334 110.92 7.18688C110.92 9.92048 108.96 10.9841 105.33 10.9841Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M0 3.60831H10.45L0 10.7455V14.1153H16.45V10.7455H6L16.45 3.60831V0.238525H0V3.60831Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M32.87 2.47515C31.48 0.914513 29.13 0 25.81 0C21.02 0 17.61 2.07753 17.61 6.97813C17.61 11.8787 21.02 13.9563 25.81 13.9563C29.1 13.9563 31.45 13.0417 32.87 11.4811V16.6402L19.1 16.5606V20H36.95V0.238569H32.87V2.47515ZM27.28 10.5765C23.46 10.5765 21.66 9.51292 21.66 6.96819C21.66 4.42346 23.46 3.35984 27.28 3.35984C31.1 3.35984 32.87 4.42346 32.87 6.96819C32.87 9.51292 31.1 10.5765 27.28 10.5765Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M43.04 2.59443V0.238569H38.99V14.1153H43.04V5.79523C45.51 3.88668 48.11 3.36978 50.39 3.36978C51.58 3.36978 52.64 3.50895 53.97 3.83698V0.467197C53.02 0.238569 51.86 0 50.2 0C47.59 0 45.13 0.725646 43.04 2.59443Z"
-                fill="currentColor"
-              ></path>
-              <path
-                d="M85.54 11.6898L79.57 0.238525H75.06L82.29 14.1153H84.38L81.56 20H86.04L95.47 0.238525H90.99L85.54 11.6898Z"
-                fill="currentColor"
-              ></path>
-            </svg>
+            <img class="logo" src="./images/logo_OK1.png" alt="" />
           </a>
         </div>
-
         <h2 class="contact-us_title">
           E-MAIL US AT
           <span class="contact-us_link"
@@ -129,7 +65,7 @@
               />
             </li>
             <li class="modal-item">
-              <label for="user-email" class="modal-label">Пошта</label>
+              <label for="user-email" class="modal-label">Email</label>
               <input
                 type="email"
                 class="modal-input"
@@ -140,14 +76,13 @@
             </li>
           </ul>
           <div class="modal-comment-wrapp">
-            <label for="user-comment" class="text"></label>
+            <label for="user-comment" class="text">Your message</label>
             <textarea
               name="user-comment"
               class="modal-comment"
               id="user-comment"
               cols="30"
               rows="10"
-              placeholder="Your message"
               required=""
             ></textarea>
           </div>
@@ -158,16 +93,16 @@
     <!-- --------------------MENU----------------->
 
     <div class="section menu-container js-menu-container" id="mobile-menu">
-      <button
-        class="menu-toggle js-close-menu"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-      >
-        <svg class="icon-close" width="40" height="40">
-          <use href="./images/icons.svg#icon-close"></use>
-        </svg>
-      </button>
       <div class="menu_wrapp">
+        <button
+          class="menu-toggle js-close-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg class="icon-close" width="40" height="40">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
         <!-- -----------Navigation----------- -->
         <div class="menu_wrapp_nav">
           <h3 class="menu_title nav">About</h3>
