--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,12 +1,22 @@
-.section {
-    display: flex;
-    align-items: center;
-    padding: 18px 30px 16px;
-}
-
 .header {
     display: flex;
+    align-items: center;
+    padding: 12px 15px 10px;
+    margin: auto;
     justify-content: space-between;
+    max-width: 1600px;
+    
+
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 14px 26px 12px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 18px 30px 16px;
+        
+    }
 }
 
 .logo_link {
@@ -17,8 +27,11 @@
 
 .logo {
     display: block;
+    width: 140px;
     align-items: center;
     padding-left: 18px;
+
+
 }
 
 .menu {
@@ -28,17 +41,27 @@
 }
 
 .menu_contacts {
-    margin-right: 24px;
+    margin-right: 10px;
+    margin-left: 10px;
     font-weight: 500px;
+    font-size: 12px;
+    line-height: 0.7;
+
+//  tablet
+    @media screen and (min-width: 768px) {
+        font-size: 16px;
+        margin-right: 20px;
+    }
+            
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        font-size: 20px;
+        margin-right: 24px;
+    }
 }
 
 .menu_main {
     padding: 0;
-
-
-    width: 32px;
-    height: 32px;
-
     color: inherit;
     background: 0 0;
     display: inline-block;
@@ -47,6 +70,20 @@
 .menu_main_icon {
     display: block;
     fill: var(--brand-color);
+    width: 20px;
+    height: 20px;
+
+    //  tablet
+    @media screen and (min-width: 768px) {
+        width: 26px;
+        height: 26px;
+    }
+            
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        width: 34px;
+        height: 34px;
+    }
 }
 
 // Button menu
@@ -64,11 +101,6 @@
     border: none;
     border-radius: 50%;
     outline: none;
-
-    &:hover,
-    &:focus {
-        background-color: var(--dark-text-color);
-    }
 }
 
 // Menu transform
@@ -83,7 +115,7 @@
     background-color: var(--dark-text-color);
     opacity: 80%;
     z-index: 999;
-
+    
     transform: translateX(100%);
     transition: transform 500ms ease-in-out;
 }
@@ -98,76 +130,173 @@
     position: absolute;
     top: 16px;
     right: 16px;
-    color: var(--brand-color);
 }
 
 .icon-close {
-    fill: var(--light-color);
+    position: absolute;
+    fill: var(--brand-color);
+    top: -20%;
+    left: 20%;
 }
 
 .menu_wrapp {
     display: flex;
-    padding-top: 110px; 
-    margin-left: 100px;
-    gap: 100px;
+    max-width: 1600px;
+    padding-top: 40px; 
+    margin-left: 40px;
+    gap: 40px;
+    
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding-top: 60px;
+        margin-left: 60px;
+        gap: 60px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding-top: 100px;
+        margin-left: 100px;
+        gap: 100px;
+    }
 }
 
 .menu_wrapp_nav,
 .menu_wrapp_social {
-    padding: 0 18px;
+    padding: 0 8px;
+
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 0 12px;
+    }
+        
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 0 18px;
+    }
 }
 
 .menu_title {
     margin: 0;
     color: var(--title-text-color);
     line-height: 1.56;
-    font-size: 18px;
     font-weight: 400;
+    font-size: 14px;
 
     padding: 0 0 24px;
+    
+        //  tablet
+        @media screen and (min-width: 768px) {
+            font-size: 16px;
+        }
+    
+        //  desktop
+        @media screen and (min-width: 1200px) {
+            font-size: 20px;
+        }
 }
 
 .item {
-    margin-bottom: 20px;
-
-    font-size: 22px;
-    line-height: 1.56;
+    margin-bottom: 10px;
+    font-size: 14px;
+    line-height: 1;
+    
+    //  tablet
+    @media screen and (min-width: 768px) {
+        margin-bottom: 16px;
+        font-size: 16px;
+        line-height: 1.26;
+    }
+        
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 20px;
+        font-size: 22px;
+        line-height: 1.56;
+    }
 }
 
 .social-mobile {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
+
+    @media screen and (min-width: 768px) {
+        gap: 20px;
+    }
 }
 
 // ------------Contact us ---------------
+.menu-container {
+    position: fixed;
+}
+
 
 .js-menu-container-contacts {
-    padding: 0;
     display: flex;
+    align-items: center;
+    padding: 0;
 }
 
 .logo.contact-us {
     padding: 0;
-    margin-bottom: 128px;  
+    margin-bottom: 20px;  
+
+    //  tablet
+        @media screen and (min-width: 768px) {
+            margin-bottom: 40px;
+        }
+    
+        //  desktop
+        @media screen and (min-width: 1200px) {
+            margin-bottom: 80px;
+            
+        }
 }
+
 
 .contact-us_main-wrapp.logo {
     padding: 0;
 }
 
 .contact-us_main-wrapp {
+    position: absolute;
+    display: block;
     background-color: var(--light-color);
-    padding: 18px 30px 16px;
+    margin-top: 20px;
+    padding: 14px 20px 12px;
     width: 65vw;
-    height: 100%;
+    min-height: 300px;
+
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 14px 20px 12px;
+        max-width: 600px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 18px 30px 16px;
+        min-height: 520px;
+    }
 }
 
 .contact-us_title {
-    padding: 0 18px;
+    padding: 0 6px;
     color: var(--dark-text-color);
-    font-size: 40px;
+    font-size: 25px;
     font-weight: 400;
+
+    @media screen and (min-width: 768px) {
+        font-size: 30px;
+        padding: 0 12px;
+    }
+
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        font-size: 40px;
+        padding: 0 18px;
+    }
 }
 
 .contact-link:hover {
@@ -180,29 +309,48 @@
 
 .modal-list.list {
     display: flex;
+    gap: 10px;
+
+    @media screen and (min-width: 1200px) {
     gap: 20px;
-    margin-bottom: 20px;
+    }
 }
 
-.modal-label {
-    font-size: 12px;
+.modal-label, .text {
+    font-size: 10px;
     color: var(--title-text-color);
     line-height: 1, 17;
     letter-spacing: 0.01em;
+
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        font-size: 12px;
+    }
 }
 
 .modal-input {
     width: 100%;
-    height: 40px;
+    height: 20px;
     border-bottom: 1px solid var(--dark-text-color);
     border-radius: 4px;
-    font-size: 20px;
-    outline: unset;
-    padding: 16px;
+    font-size: 10px;
+    padding: 4px;
     
     transition: border-bottom 250ms;
-}
 
+    @media screen and (min-width: 768px) {
+        height: 30px;
+        padding: 10px;
+        font-size: 14px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        height: 40px;
+        padding: 16px;
+        font-size: 20px;
+    }
+}
 
 .modal-item:not(:last-child) {
     margin-bottom: 10px;
@@ -214,7 +362,7 @@
 
 .modal-comment {
     width: 100%;
-    height: 138px;
+    height: 80px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.01em;
@@ -222,9 +370,19 @@
     outline: transparent;
     padding: 16px;
     margin-bottom: 20px;
+    border-radius: 4px;
     border-bottom: 1px solid var(--dark-text-color);
     resize: none;
     display: block;
+
+    @media screen and (min-width: 768px) {
+        height: 100px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        height: 130px;
+    }
 }
 
 .modal-comment::placeholder {
@@ -236,30 +394,50 @@
 
 
 .modal-button {
-    min-width: 200px;
-    height: 50px;
     background-color: transparent;
-    color: var(--dark-text-color);
-    box-shadow: 0px 4px 4px var(--dark-text-color);
+    color: var(--brand-color);
+    box-shadow: 0px 4px 4px var(--brand-color);
+    font-size: 10px;
     font-family: inherit;
     font-weight: 500;
-    font-size: 20px;
-    line-height: 1.88;
+    line-height: 1;
     border-style: none;
     border-radius: 4px;
     letter-spacing: 0.06em;
-
+    
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+    
     display: block;
     margin: auto;
-
+    margin-bottom: 15px;
+    border: 1px solid var(--brand-color);
+    border-radius: 4px;
+    padding: 4px 10px;
+            
+    transform: translateY(100px);
+    animation: wiggle 2s linear infinite;
+        
+    @media screen and (min-width: 480px) {
+        padding: 6px 12px;
+    }
+        
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 8px 16px;
+        font-size: 17px;
+    }
+        
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 10px 20px;
+        font-size: 20px;
+    }
     &:hover,
     &:focus {
         cursor: pointer;
-        background-color: var(--brand-color);
+        background-color: var(--light-color);
         box-shadow: 0px 4px 4px var(--title-text-color);
     }
 }
