--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 // font-family: 'Bebas Neue',
 // sans-serif;
 // font-family: 'Comfortaa',
@@ -14,23 +15,94 @@
 // sans-serif;
 // font-family: 'VT323',
 // monospace;
-
 .hero {
-    padding: 0 30px;
-    background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.2), rgba(47, 48, 58, 0.2)), url(../images/Whale-waves-underwater-abstract-design_2880x1800.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    max-width: 100%;
-    height: 40vw;
+    display: block;
+    // padding: 0 30px;
     // background-color: #c4c4c4;
     text-align: center;
+    max-width: 1600px;
+    background-color: #C4C4C4;
+    padding: 50px 0;
+    background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+    background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)),(rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: auto;
+    background-size: cover;
 }
+
+// @media (min-device-pixel-ratio: 2),
+// (-webkit-min-device-pixel-ratio: 2),
+// (min-resolution: 192dpi),
+// (min-resolution: 2dppx) {
+//     .hero {
+//         background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)),to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+//         background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)),
+//             (rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+//     }
+// }
+
+// @media screen and (min-width: 481px) {
+//     .hero {
+//         background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)),to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+//         background-image: linear-gradient(to top left,rgba(47, 48, 58, 0.300)),
+//             (rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+//     }
+// }
+
+// @media screen and (min-width: 481px) and (min-device-pixel-ratio: 2),
+// screen and (min-width: 481px) and (-webkit-min-device-pixel-ratio: 2),
+// screen and (min-width: 481px) and (min-resolution: 192dpi),
+// screen and (min-width: 481px) and (min-resolution: 2dppx) {
+//     .hero {
+//         background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)),to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+//         background-image: linear-gradient(to top left,rgba(47, 48, 58, 0.300)),
+//             (rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+//     }
+// }
+
+// @media screen and (min-width: 769px) {
+//     .hero {
+//         background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)),to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+//         background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)),
+//             (rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+//     }
+// }
+
+// @media screen and (min-width: 769px) and (min-device-pixel-ratio: 2),
+// screen and (min-width: 769px) and (-webkit-min-device-pixel-ratio: 2),
+// screen and (min-width: 769px) and (min-resolution: 192dpi),
+// screen and (min-width: 769px) and (min-resolution: 2dppx) {
+//     .hero {
+//         background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)),to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
+//         background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)),
+//             (rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+//     }
+// }
+
+@media screen and (min-width: 1200px) {
+    .hero {
+        padding: 30px 0;
+    }
+}
+
 
 .hero-wrapp {
     display: flex;
     align-items: center;
-    padding: 80px 0 120px;
+    @media screen and (min-width: 480px) {
+        padding: 80px 0 80px;
+    }
+    
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 160px 0 120px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 155px 0 155px;
+    }
 }
 
 .spolight {
@@ -40,23 +112,44 @@
 
 .hero-descr {
     text-align: start;
-    padding: 0 18px;
+    padding: 0 6px;
+    @media screen and (min-width: 480px) {
+            padding: 0 10px;
+        }
+    
+        //  tablet
+        @media screen and (min-width: 768px) {
+            padding: 0 14px;
+        }
+    
+        //  desktop
+        @media screen and (min-width: 1200px) {
+            padding: 0 18px;
+        }
 }
 
 .hero-title {
-    margin: 0;
-    margin-bottom: 20px;
-
+    margin-bottom: 6px;
     font-family: var(--main-type-title);
-    font-size: 120px;
     color: var(--grey-bg-color);
-
-
     transform: translateY(100px);
     animation: slideUp .8s ease forwards .1s;
 
-    &:hover {
-    cursor: pointer;
+    @media screen and (min-width: 480px) {
+        font-size: 60px;
+        margin-bottom: 10px;
+    }
+            
+    //  tablet
+    @media screen and (min-width: 768px) {
+        font-size: 80px;
+        margin-bottom: 14px;
+    }
+            
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        font-size: 120px;
+        margin-bottom: 20px;
     }
 }
 
@@ -75,25 +168,42 @@
 //   100% {
 //       transform: translateX(0px);
 //   } 
-  0% {
-      transform: translateX(500px) scale(.2);
-  }
+    0% {
+        transform: translateX(500px) scale(.2);
+    }
 
-  100% {
-      transform: translateX(0px) scale(1);
-  }
+    100% {
+        transform: translateX(0px) scale(1);
+    }
 }
 
 .hero-text,
 .hero-link {
     margin: 0;
-    margin-bottom: 20px;
+    margin-bottom: 6px;
 
-    font-size: 20px;
+    font-size: 10px;
     color: var(--grey-bg-color);
 
     transform: translateY(100px);
     animation: slideUp .8s ease forwards .1s;
+
+    @media screen and (min-width: 480px) {
+        font-size: 12px;
+        margin-bottom: 10px;
+    }
+    
+    //  tablet
+    @media screen and (min-width: 768px) {
+        font-size: 17px;
+        margin-bottom: 14px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
 
     &:hover {
         cursor: pointer;
@@ -101,13 +211,31 @@
 }
 
 .hero-btn {
-    padding: 10px 20px;
     border: 1px solid var(--brand-color);
     border-radius: 4px;
+    padding: 4px 10px;
+    font-size: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
 
     transform: translateY(100px);
     animation: wiggle 2s linear infinite;
 
+    @media screen and (min-width: 480px) {
+        font-size: 12px;
+        padding: 6px 12px;
+    }
+    
+    //  tablet
+    @media screen and (min-width: 768px) {
+        padding: 8px 16px;
+        font-size: 17px;
+    }
+    
+    //  desktop
+    @media screen and (min-width: 1200px) {
+        padding: 10px 20px;
+        font-size: 20px;
+    }
 
         &:hover {
             color: var(--light-color);
