--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -4,11 +4,9 @@
     // background-color: #c4c4c4;
     text-align: center;
     max-width: 1600px;
-    background-color: #C4C4C4;
+    background-color: #c4c4c400;
     padding: 50px 0;
-    background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), 
-    to(rgba(47, 48, 58, 0.150))), url(../images/Footer.jpg);
-    background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)), (rgba(47, 48, 58, 0.150)), url(../images/Footer.jpg);
+    background-image: url(../images/Footer.jpg);
     background-repeat: no-repeat;
     background-position: center;
     margin: auto;
