--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -21,10 +21,9 @@
     // background-color: #c4c4c4;
     text-align: center;
     max-width: 1600px;
-    background-color: #C4C4C4;
+    background-color: #c4c4c400;
     padding: 50px 0;
-    background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))), url(../images/FON.jpg);
-    background-image: linear-gradient(to top left, rgba(47, 48, 58, 0.300)),(rgba(47, 48, 58, 0.150)), url(../images/FON.jpg);
+    background-image: url(../images/NewFon2.png);
     background-repeat: no-repeat;
     background-position: center;
     margin: auto;
