--- a/src/sass/_services.scss
+++ b/src/sass/_services.scss
@@ -107,9 +107,7 @@
         background-image: url('../images/photo_2023-05-18_16-15-02.jpg');
         background-size: cover;
         background-repeat: no-repeat;
-        background-color: #C4C4C4;
-        background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))),
-        url('../images/photo_2023-05-18_16-15-02.jpg');
+        background-color: #c4c4c400;
         background-position: center;
 }
 
@@ -131,9 +129,7 @@
     background-image: url('../images/FON.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-color: #C4C4C4;
-    background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))),
-    url('../images/FON.jpg');
+    background-color: #c4c4c400;
     background-position: center;
 }
 
@@ -154,9 +150,7 @@
         background-image: url('../images/photo_2023-05-18_16-14-41.jpg');
         background-size: cover;
         background-repeat: no-repeat;
-        background-color: #C4C4C4;
-        background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))),
-        url('../images/photo_2023-05-18_16-14-41.jpg');
+        background-color: #c4c4c400;
         background-position: center;
 }
 
@@ -177,9 +171,7 @@
         background-image: url('../images/photo_2023-05-18_16-14-54.jpg');
         background-size: cover;
         background-repeat: no-repeat;
-        background-color: #C4C4C4;
-        background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))),
-        url('../images/photo_2023-05-18_16-14-54.jpg');
+        background-color: #c4c4c400;
         background-position: center;
 }
 
@@ -199,9 +191,7 @@
         background-image: url('../images/photo_2023-05-18_16-14-58.jpg');
         background-size: cover;
         background-repeat: no-repeat;
-        background-color: #C4C4C4;
-        background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(47, 48, 58, 0.300)), to(rgba(47, 48, 58, 0.150))),
-        url('../images/photo_2023-05-18_16-14-58.jpg');
+        background-color: #c4c4c400;
         background-position: center;
 }
 
@@ -217,13 +207,15 @@
 
 .services_desc {
     position: absolute;
+    color: var(--dark-text-color);
     width: 100%;
     height: 100%;
     bottom: 0;
     margin: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, 0.589);
+    background-color: rgba(255, 255, 255, 0.5);
     font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 10px;
     line-height: 1;
     align-items: center;
@@ -248,3 +240,7 @@
     opacity: 1;
     transform: translateY(0);
 }
+
+
+
+
